--- a/weather.html
+++ b/weather.html
@@ -6,29 +6,33 @@
         <style type="text/css">
             div {
                 border: 1px solid black;
-                padding: 0.4em;
-                margin: 0.4em;
+                padding: 0.1em;
+                margin: 0.1em;
                 min-height: 200px;
             }
             .grid {
                 display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                gap: 10px;
+                grid-template-columns: repeat(4, 1fr);
+                gap: 5px;
                 grid-auto-rows: minmax(100px, auto);
             }
             .grid-one {
                 grid-column: span 1;
                 grid-row: 1;
             }
+            .grid-two {
+                grid-column: span 2;
+                grid-row: 1;
+            }
             .grid-full {
-                grid-column: span 3;
+                grid-column: span 4;
             }
         </style>
     </head>
     <body>
         <div class="grid">
             <div id="temperature" class="grid-one">Temperature</div>
-            <div id="weather-info" class="grid-one">Weather info</div>
+            <div id="weather-info" class="grid-two">Weather info</div>
             <div id="moon" class="grid-one">Moon</div>
             <div class="grid-full">
                 <div id="temperature-graph">Temperature and dewpoint graph</div>
